<resources>
    <string name="app_name">MisTareasITT</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="imagen_de_fondo">imagen de fondo</string>
    <string name="itt">ITT</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="hecho">Hecho</string>
</resources>
