<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/fondos" />

    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/mis_tareas"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/itt"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitulo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cajaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="17sp">

                <requestFocus />


            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cajaPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout"
        android:layout_alignEnd="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/boton"
        android:drawableEnd="@mipmap/login"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cuentaNueva"
        style="@style/etiquetas"
        android:layout_below="@+id/botonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:onClick="crearCuenta"
        android:text="@string/crea_una_cuenta"
        android:textSize="20sp" />

</RelativeLayout>